# tus-datos-test

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .coverage  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: fd89eeb2a845_init_schema.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  event.py  registration.py  session.py  user.py
backend/app/routers/: auth.py  events.py  registrations.py  sessions.py
backend/app/schemas/: auth.py  event.py  registration.py  session.py
backend/app/services/: events.py  registrations.py  sessions.py
backend/tests/: conftest.py  test_auth.py  test_events.py  test_registrations.py  test_sessions.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/docker/: nginx.conf
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  events.ts
frontend/src/components/: Navbar.tsx  Pagination.tsx  ProtectedRoute.tsx
frontend/src/pages/: EventCreate.tsx  EventDetail.tsx  EventsList.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/src/store/: authStore.ts
frontend/tests/: setup.ts
frontend/tests/api/: client.test.ts
frontend/tests/components/: Navbar.test.ts  ProtectedRoute.test.tsx
frontend/tests/pages/: EventCreate.test.tsx  EventDetail.test.tsx  EventsList.test.tsx  Login.test.tsx  Profile.test.tsx
(+3 files in other folders)
