[tool.poetry]
name = "mis-eventos-backend"
version = "0.1.0"
description = "API de Mis Eventos (FastAPI + SQLAlchemy + Alembic)"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
sqlmodel = "^0.0.21"
psycopg = { extras = ["binary"], version = "^3.2.1" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
alembic = "^1.13.2"
python-multipart = "^0.0.9"
email-validator = "^2.2.0"
pytest-cov = "^5.0.0"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"
coverage = "^7.6.1"
ruff = "^0.5.5"
pytest-asyncio = "^0.23.8"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
